[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
polars = "0.16.8"
scikit-learn = "1.0.2"
kaggle = "^1.5.16"
ipykernel = "6.16.2"
pandas = "1.3.5"
pyarrow = "6.0.1"


[tool.poetry.group.dev.dependencies]
mypy = "1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
