[tool.poetry]
name = "kaggle-zzz"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "2.0.3"
scikit-learn = "1.2.2"
ipykernel = "6.23.3"
polars = "0.19.2"
pyarrow = "9.0.0"
xgboost = "1.7.6"
kaggle = "1.5.16"
torch = {version = "2.0.0", source = "pytorch-cpu"}
matplotlib = "^3.8.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"


[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
